feat: opening modules is not anymore required